// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HeroSection Snapshot Tests should match snapshot when session is pending 1`] = `
<div>
  <section
    class="py-12 sm:py-16 relative overflow-hidden"
    style="background-image: url("/images/background/homepage.png"); background-size: cover; padding: 0px;"
  >
    <div
      class="max-w-[1296px] mx-auto px-4 sm:px-6 lg:px-0 "
    >
      <header
        class="w-full relative z-10"
      >
        <div
          class="max-w-[1296px] mx-auto py-4 px-4 sm:px-6 flex items-center gap-4 sm:gap-14"
        >
          <a
            aria-label="Homepage"
            class="flex items-center gap-2 no-underline flex-shrink-0"
            href="/"
          >
            <svg
              class="w-6 h-6 sm:w-8 sm:h-8"
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="15.9999"
                cy="15.9999"
                fill="#FFD245"
                r="15.9999"
              />
              <mask
                height="32"
                id="mask0_2053_384"
                maskUnits="userSpaceOnUse"
                style="mask-type: alpha;"
                width="32"
                x="0"
                y="0"
              >
                <circle
                  cx="15.9999"
                  cy="15.9999"
                  fill="#FFD245"
                  r="15.9999"
                />
              </mask>
              <g
                mask="url(#mask0_2053_384)"
              >
                <circle
                  cx="19.3045"
                  cy="9.53418"
                  fill="#FFE486"
                  r="15.9999"
                />
                <circle
                  cx="28.3808"
                  cy="9.53418"
                  fill="#EE7B11"
                  r="15.9999"
                />
              </g>
              <circle
                cx="24.7011"
                cy="24.7013"
                fill="#1642B9"
                r="6.29869"
                stroke="white"
                stroke-width="2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Homepage
            </span>
            <div
              class="hidden sm:block"
            >
              <h1
                aria-level="1"
                class="text-2xl font-semibold"
                role="heading"
              >
                <span
                  class="font-secondary text-primary text-xl sm:text-2xl lg:text-3xl font-light"
                >
                  SaaS
                  <span
                    class="font-medium"
                  >
                    Candy
                  </span>
                </span>
              </h1>
            </div>
          </a>
          <div
            data-testid="navbar"
          >
            Navbar
          </div>
          <div
            class="ml-auto flex items-center gap-2 sm:gap-4"
          >
            <svg
              class="w-8 h-8 sm:w-10 sm:h-10"
              fill="none"
              height="40"
              viewBox="0 0 40 40"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="white"
                height="40"
                rx="20"
                width="40"
              />
              <path
                d="M20 30C25.523 30 30 25.523 30 20C30 19.537 29.306 19.46 29.067 19.857C28.5572 20.7013 27.862 21.4186 27.034 21.9545C26.206 22.4903 25.2669 22.8307 24.2878 22.9499C23.3088 23.0691 22.3154 22.9639 21.383 22.6423C20.4507 22.3207 19.6037 21.7911 18.9063 21.0937C18.2089 20.3963 17.6793 19.5493 17.3577 18.617C17.0361 17.6846 16.9309 16.6912 17.0501 15.7122C17.1693 14.7331 17.5097 13.794 18.0455 12.966C18.5814 12.138 19.2987 11.4428 20.143 10.933C20.54 10.693 20.463 10 20 10C14.477 10 10 14.477 10 20C10 25.523 14.477 30 20 30Z"
                fill="black"
              />
            </svg>
            <div
              data-testid="auth-skeleton"
            >
              Loading...
            </div>
          </div>
        </div>
      </header>
      <div
        class="max-w-[1296px] mx-auto px-4 sm:px-6 py-8 sm:py-16 flex flex-col lg:flex-row items-center justify-between gap-8 lg:gap-16"
      >
        <div
          class="space-y-4 sm:space-y-7.5 text-center lg:text-left"
        >
          <h2
            aria-level="2"
            class="font-semibold text-primary max-w-lg text-3xl sm:text-5xl lg:text-7xl"
            role="heading"
          >
            Build Innovative Apps For Your Business
          </h2>
          <p
            class="text-md text-gray-background max-w-lg sm:text-lg font-regular"
            role="paragraph"
          >
            Build smarter, move faster, and grow stronger with custom apps designed to support your business every step of the way.
          </p>
          <button
            class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5 w-full sm:w-auto"
          >
            Browse our services
          </button>
        </div>
        <div
          class="flex justify-center lg:justify-end w-full lg:w-auto"
        >
          <img
            alt="Business dashboard stats"
            class="rounded-xl w-full lg:max-w-none h-auto lg:h-[685px]"
            data-nimg="1"
            decoding="async"
            height="685"
            loading="lazy"
            src="/_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=1920&q=75"
            srcset="/_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=750&q=75 1x, /_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=1920&q=75 2x"
            style="color: transparent;"
            width="729"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`HeroSection Snapshot Tests should match snapshot when user is logged in 1`] = `
<div>
  <section
    class="py-12 sm:py-16 relative overflow-hidden"
    style="background-image: url("/images/background/homepage.png"); background-size: cover; padding: 0px;"
  >
    <div
      class="max-w-[1296px] mx-auto px-4 sm:px-6 lg:px-0 "
    >
      <header
        class="w-full relative z-10"
      >
        <div
          class="max-w-[1296px] mx-auto py-4 px-4 sm:px-6 flex items-center gap-4 sm:gap-14"
        >
          <a
            aria-label="Homepage"
            class="flex items-center gap-2 no-underline flex-shrink-0"
            href="/"
          >
            <svg
              class="w-6 h-6 sm:w-8 sm:h-8"
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="15.9999"
                cy="15.9999"
                fill="#FFD245"
                r="15.9999"
              />
              <mask
                height="32"
                id="mask0_2053_384"
                maskUnits="userSpaceOnUse"
                style="mask-type: alpha;"
                width="32"
                x="0"
                y="0"
              >
                <circle
                  cx="15.9999"
                  cy="15.9999"
                  fill="#FFD245"
                  r="15.9999"
                />
              </mask>
              <g
                mask="url(#mask0_2053_384)"
              >
                <circle
                  cx="19.3045"
                  cy="9.53418"
                  fill="#FFE486"
                  r="15.9999"
                />
                <circle
                  cx="28.3808"
                  cy="9.53418"
                  fill="#EE7B11"
                  r="15.9999"
                />
              </g>
              <circle
                cx="24.7011"
                cy="24.7013"
                fill="#1642B9"
                r="6.29869"
                stroke="white"
                stroke-width="2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Homepage
            </span>
            <div
              class="hidden sm:block"
            >
              <h1
                aria-level="1"
                class="text-2xl font-semibold"
                role="heading"
              >
                <span
                  class="font-secondary text-primary text-xl sm:text-2xl lg:text-3xl font-light"
                >
                  SaaS
                  <span
                    class="font-medium"
                  >
                    Candy
                  </span>
                </span>
              </h1>
            </div>
          </a>
          <div
            data-testid="navbar"
          >
            Navbar
          </div>
          <div
            class="ml-auto flex items-center gap-2 sm:gap-4"
          >
            <svg
              class="w-8 h-8 sm:w-10 sm:h-10"
              fill="none"
              height="40"
              viewBox="0 0 40 40"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="white"
                height="40"
                rx="20"
                width="40"
              />
              <path
                d="M20 30C25.523 30 30 25.523 30 20C30 19.537 29.306 19.46 29.067 19.857C28.5572 20.7013 27.862 21.4186 27.034 21.9545C26.206 22.4903 25.2669 22.8307 24.2878 22.9499C23.3088 23.0691 22.3154 22.9639 21.383 22.6423C20.4507 22.3207 19.6037 21.7911 18.9063 21.0937C18.2089 20.3963 17.6793 19.5493 17.3577 18.617C17.0361 17.6846 16.9309 16.6912 17.0501 15.7122C17.1693 14.7331 17.5097 13.794 18.0455 12.966C18.5814 12.138 19.2987 11.4428 20.143 10.933C20.54 10.693 20.463 10 20 10C14.477 10 10 14.477 10 20C10 25.523 14.477 30 20 30Z"
                fill="black"
              />
            </svg>
            <div
              data-testid="user-menu"
            >
              User Menu
            </div>
          </div>
        </div>
      </header>
      <div
        class="max-w-[1296px] mx-auto px-4 sm:px-6 py-8 sm:py-16 flex flex-col lg:flex-row items-center justify-between gap-8 lg:gap-16"
      >
        <div
          class="space-y-4 sm:space-y-7.5 text-center lg:text-left"
        >
          <h2
            aria-level="2"
            class="font-semibold text-primary max-w-lg text-3xl sm:text-5xl lg:text-7xl"
            role="heading"
          >
            Build Innovative Apps For Your Business
          </h2>
          <p
            class="text-md text-gray-background max-w-lg sm:text-lg font-regular"
            role="paragraph"
          >
            Build smarter, move faster, and grow stronger with custom apps designed to support your business every step of the way.
          </p>
          <button
            class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5 w-full sm:w-auto"
          >
            Browse our services
          </button>
        </div>
        <div
          class="flex justify-center lg:justify-end w-full lg:w-auto"
        >
          <img
            alt="Business dashboard stats"
            class="rounded-xl w-full lg:max-w-none h-auto lg:h-[685px]"
            data-nimg="1"
            decoding="async"
            height="685"
            loading="lazy"
            src="/_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=1920&q=75"
            srcset="/_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=750&q=75 1x, /_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=1920&q=75 2x"
            style="color: transparent;"
            width="729"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`HeroSection Snapshot Tests should match snapshot when user is not logged in 1`] = `
<div>
  <section
    class="py-12 sm:py-16 relative overflow-hidden"
    style="background-image: url("/images/background/homepage.png"); background-size: cover; padding: 0px;"
  >
    <div
      class="max-w-[1296px] mx-auto px-4 sm:px-6 lg:px-0 "
    >
      <header
        class="w-full relative z-10"
      >
        <div
          class="max-w-[1296px] mx-auto py-4 px-4 sm:px-6 flex items-center gap-4 sm:gap-14"
        >
          <a
            aria-label="Homepage"
            class="flex items-center gap-2 no-underline flex-shrink-0"
            href="/"
          >
            <svg
              class="w-6 h-6 sm:w-8 sm:h-8"
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="15.9999"
                cy="15.9999"
                fill="#FFD245"
                r="15.9999"
              />
              <mask
                height="32"
                id="mask0_2053_384"
                maskUnits="userSpaceOnUse"
                style="mask-type: alpha;"
                width="32"
                x="0"
                y="0"
              >
                <circle
                  cx="15.9999"
                  cy="15.9999"
                  fill="#FFD245"
                  r="15.9999"
                />
              </mask>
              <g
                mask="url(#mask0_2053_384)"
              >
                <circle
                  cx="19.3045"
                  cy="9.53418"
                  fill="#FFE486"
                  r="15.9999"
                />
                <circle
                  cx="28.3808"
                  cy="9.53418"
                  fill="#EE7B11"
                  r="15.9999"
                />
              </g>
              <circle
                cx="24.7011"
                cy="24.7013"
                fill="#1642B9"
                r="6.29869"
                stroke="white"
                stroke-width="2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Homepage
            </span>
            <div
              class="hidden sm:block"
            >
              <h1
                aria-level="1"
                class="text-2xl font-semibold"
                role="heading"
              >
                <span
                  class="font-secondary text-primary text-xl sm:text-2xl lg:text-3xl font-light"
                >
                  SaaS
                  <span
                    class="font-medium"
                  >
                    Candy
                  </span>
                </span>
              </h1>
            </div>
          </a>
          <div
            data-testid="navbar"
          >
            Navbar
          </div>
          <div
            class="ml-auto flex items-center gap-2 sm:gap-4"
          >
            <svg
              class="w-8 h-8 sm:w-10 sm:h-10"
              fill="none"
              height="40"
              viewBox="0 0 40 40"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="white"
                height="40"
                rx="20"
                width="40"
              />
              <path
                d="M20 30C25.523 30 30 25.523 30 20C30 19.537 29.306 19.46 29.067 19.857C28.5572 20.7013 27.862 21.4186 27.034 21.9545C26.206 22.4903 25.2669 22.8307 24.2878 22.9499C23.3088 23.0691 22.3154 22.9639 21.383 22.6423C20.4507 22.3207 19.6037 21.7911 18.9063 21.0937C18.2089 20.3963 17.6793 19.5493 17.3577 18.617C17.0361 17.6846 16.9309 16.6912 17.0501 15.7122C17.1693 14.7331 17.5097 13.794 18.0455 12.966C18.5814 12.138 19.2987 11.4428 20.143 10.933C20.54 10.693 20.463 10 20 10C14.477 10 10 14.477 10 20C10 25.523 14.477 30 20 30Z"
                fill="black"
              />
            </svg>
            <div
              class="hidden sm:flex items-center gap-2 sm:gap-4"
            >
              <a
                class="no-underline"
                href="/signin"
              >
                <button
                  class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-white text-orange-background border border-orange-background hover:bg-orange-background hover:text-white focus-visible:ring-primary px-4 py-2.5"
                >
                  Sign In
                </button>
              </a>
              <a
                class="no-underline"
                href="/signup"
              >
                <button
                  class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-4 py-2.5"
                >
                  Sign Up
                </button>
              </a>
            </div>
            <div
              class="mobile-auth-toggle relative"
            >
              <button
                aria-label="Toggle auth menu"
                class="cursor-pointer inline-flex items-center justify-center rounded-full transition-colors focus-visible:outline-none focus-visible:ring-0 focus-visible:ring-ring focus-visible:ring-offset-0 disabled:opacity-50 disabled:cursor-not-allowed button-animation bg-transparent border-none hover:opacity-90 w-6 h-6 text-primary p-0"
                data-testid="icon-button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-user w-6 h-6"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </header>
      <div
        class="max-w-[1296px] mx-auto px-4 sm:px-6 py-8 sm:py-16 flex flex-col lg:flex-row items-center justify-between gap-8 lg:gap-16"
      >
        <div
          class="space-y-4 sm:space-y-7.5 text-center lg:text-left"
        >
          <h2
            aria-level="2"
            class="font-semibold text-primary max-w-lg text-3xl sm:text-5xl lg:text-7xl"
            role="heading"
          >
            Build Innovative Apps For Your Business
          </h2>
          <p
            class="text-md text-gray-background max-w-lg sm:text-lg font-regular"
            role="paragraph"
          >
            Build smarter, move faster, and grow stronger with custom apps designed to support your business every step of the way.
          </p>
          <button
            class="inline-flex items-center justify-center font-semibold text-md leading-none tracking-normal rounded-xl transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-orange-background text-white hover:opacity-90 focus-visible:ring-primary px-9 py-5 w-full sm:w-auto"
          >
            Browse our services
          </button>
        </div>
        <div
          class="flex justify-center lg:justify-end w-full lg:w-auto"
        >
          <img
            alt="Business dashboard stats"
            class="rounded-xl w-full lg:max-w-none h-auto lg:h-[685px]"
            data-nimg="1"
            decoding="async"
            height="685"
            loading="lazy"
            src="/_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=1920&q=75"
            srcset="/_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=750&q=75 1x, /_next/image?url=%2Fimages%2Fhero%2Fbanner.png&w=1920&q=75 2x"
            style="color: transparent;"
            width="729"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;
